# Vantyr

./: .env.example  .gitignore  IMPROVEMENTS_TODO.md  README.md  SECURITY.md  docker-compose.yml  package.json
.cargo/: audit.toml
.github/workflows/: ci.yml  release-agent-linux.yml  release-agent-windows.yml  release-server-docker.yml  release.yml
agent/: Cargo.toml  build.rs  package.json  tauri.conf.json
agent/browser-extension/: README.md  background.js
agent/browser-extension/chromium/: background.js  manifest.json
agent/browser-extension/firefox/: background.js  manifest.json
agent/packaging/linux/: README.md  vantyr-agent.service
agent/packaging/linux/arch/: PKGBUILD
agent/src/: agent_loop.rs  app_block.rs  app_display.rs  audio_capture.rs  capture.rs  config.rs  enrollment.rs  input.rs  ipc.rs  keyboard_capture.rs  log_sources.rs  main.rs  mdns_discover.rs  network_policy.rs  network_scheduler.rs  remote_script.rs  schedule.rs  server_command.rs  service.rs  software_inventory.rs  system_info.rs  terminal.rs  toast.rs  ui.rs  updater_client.rs  updater_manifest.rs  url_scraper.rs  win_icons.rs  window_tracker.rs  ws_client.rs
agent/src/platform/: contract.rs  mod.rs  types.rs
agent/src/platform/linux/: activity_tracker.rs  config_store.rs  desktop_capture.rs  input_control.rs  keyboard_monitor.rs  mod.rs  network_policy.rs  script_execution.rs  session.rs  software_inventory.rs  system_control.rs  system_info.rs  terminal.rs  url_provider.rs
agent/src/platform/windows/: mod.rs
agent/tools/: gen_wix_assets.py
agent/ui-src/: index.html  package-lock.json  package.json
agent/ui-src/src/: App.tsx  index.css  main.tsx  types.ts
agent/ui-src/src/components/: AgentUi.tsx  PasswordGate.tsx  SettingsModals.tsx  SettingsPanel.tsx
agent/ui-src/src/hooks/: useSystemColorScheme.ts
agent/ui-src/src/lib/: tauri.ts  utils.ts
agent/wix/: gen_installer_bitmaps.py
agent/wix/scripts/: cleanup.ps1
agent/wix/templates/: main.noshortcuts.wxs
docs/: enrollment-redesign-agent-brief.md
frontend/: .env.demo  doctor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  react-doctor.config.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentSettingsTab.tsx  AlertRuleEventScreenshotCell.tsx  CategoryManagerModal.tsx  PreferencesTab.tsx
frontend/src/components/common/: AppIcon.tsx  AuditStatusBadge.tsx  CapabilityNotice.tsx  CollectionStates.tsx  DashboardUserAvatar.tsx  EmptyState.tsx  ErrorBoundary.tsx  Icons.tsx  InfoLink.tsx  LiveBadge.tsx  Metrics.tsx  StatusIndicator.tsx
frontend/src/components/detail/: AgentDetailTabContent.tsx  AgentMiniList.tsx  AgentQuickStats.tsx  AgentVitals.tsx  GeneralConfig.tsx  PageHeader.tsx  ResourceHistory.tsx  ToolsContent.tsx
frontend/src/components/groups/: GroupModal.tsx  HistoryTable.tsx  MembersModal.tsx  RuleModal.tsx
frontend/src/components/navigation/: SideNav.tsx  TopNav.tsx
frontend/src/components/overview/: AddAgentModal.tsx  AgentCard.tsx  AgentCardGrid.tsx  AgentFleetTable.tsx  AgentListView.tsx  AgentTableRow.tsx  BulkAddToGroupModal.tsx  BulkScriptModal.tsx  FleetSnapshot.tsx  FullPageHeader.tsx  PendingAgentApprovals.tsx  PowerActionsModal.tsx  SortableTh.tsx  types.ts  utils.ts
frontend/src/components/rules/: AlertRulesTab.tsx  AppBlockingTab.tsx  EventsGlobalTab.tsx  InternetAccessTab.tsx  ScheduledScriptsTab.tsx  ScreenshotModal.tsx  rulesUtils.ts
frontend/src/components/settings/: AgentEnrollmentSettings.tsx  AppearanceSettings.tsx  DataRetentionSettings.tsx  NotificationsSettings.tsx  SecuritySettings.tsx  SystemAboutSettings.tsx  TwoFactorSettings.tsx  UrlCategorizationSettings.tsx
frontend/src/components/tabs/: AgentLogsTab.tsx  AlertsTab.tsx  AnalyticsTab.tsx  AppBlockModal.tsx  (+12 more)
frontend/src/demo/: api.ts  data.ts  fakeScreen.tsx  mode.ts
frontend/src/hooks/: useAgentActivitySessions.ts  useAgentInferredIdle.ts  useAgents.ts  useCollection.ts  useNotifications.ts  usePollDashboardServerVersion.ts  useTheme.ts  useWebSocket.ts
frontend/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx
frontend/src/lib/: activityBookmarks.ts  activityUrl.ts  agentCapabilities.ts  agentNetwork.ts  agentTabNav.ts  agentTabNavLabel.tsx  api.test.ts  api.ts  app-names.ts  live-status.test.ts  live-status.ts  preferences.ts  serverSettings.ts  session-aggregator.test.ts  session-aggregator.ts  types.ts  utils.ts
frontend/src/pages/: AccountSettingsPage.tsx  AgentDetailPage.tsx  LoginPage.tsx  LogsPage.tsx  NotificationsAdminPage.tsx  OverviewPage.tsx  RulesPage.tsx  SettingsPage.tsx  UsersPage.tsx
frontend/src/routes/: AuthenticatedAgentDetail.tsx  AuthenticatedLogs.tsx  AuthenticatedOverview.tsx  AuthenticatedSettings.tsx
frontend/src/styles/: cloudscape-theme.css  console-primitives.css  timeline.css
server/: Cargo.toml  Dockerfile
server/migrations/: 0055_agent_enrollment_claims.sql  0056_agent_metrics.sql  0057_alert_rules_monitoring.sql  0058_dashboard_user_totp.sql
server/src/: agent_capabilities.rs  agent_enroll_http.rs  alert_rules.rs  auth.rs  config.rs  db.rs  main.rs  mdns_broadcast.rs  metrics.rs  oidc.rs  oidc_http.rs  scheduler.rs  state.rs  trusted_proxy.rs  twofa.rs  url_categorization.rs  ws_agent.rs  ws_terminal.rs  ws_viewer.rs
server/src/api/: agent_analytics.rs  agent_enrollment.rs  agents_capture.rs  agents_list.rs  agents_logs.rs  agents_telemetry.rs  app_block.rs  assets.rs  groups_and_rules.rs  internet_block.rs  mod.rs  notifications.rs  scheduled_scripts.rs  settings.rs  software_scripts.rs  twofa.rs  url_categorization.rs  url_categorization_recalc.rs  url_category_overrides.rs  url_custom_categories.rs  users.rs  version.rs
server/src/db/: agent_groups.rs  agents.rs  alert_rules.rs  app_block.rs  internet_block.rs  mod.rs  queries.rs  software.rs  telemetry.rs  users_sessions.rs
server/src/notify/: discord.rs  email.rs  home_assistant.rs  message.rs  mod.rs  ntfy.rs  pushover.rs  slack.rs  teams.rs  telegram.rs  util.rs  vantyr_notification.yaml  webhook.rs
(+10 files in other folders)
