# Build from the agent/ directory. The agent is intentionally not a member of
# the root workspace because it has desktop/runtime dependencies and release
# pipelines that differ from the server.

[workspace]
# Declare an explicit workspace so Cargo does not walk up to the root workspace
# when invoked from this directory, which would cause it to compile vantyr-server
# with the Windows cross-compilation target set in .cargo/config.toml.

[package]
name        = "vantyr-agent"
version     = "0.1.6"
edition     = "2021"
description = "Vantyr endpoint agent: telemetry, screen streaming, policy enforcement, and remote control over WebSocket"

# On Windows release builders, `cargo xwin build --release` is still supported.
[[bin]]
name = "vantyr-agent"
path = "src/main.rs"

[dependencies]

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1",    features = ["full"] }
futures-util = "0.3"

# ── WebSocket ─────────────────────────────────────────────────────────────────
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite       = { version = "0.24", default-features = false }
native-tls        = "0.2"

# ── Screen capture ────────────────────────────────────────────────────────────
# xcap is a cross-platform capture library; on Windows it uses the Graphics
# Capture API internally but returns a clean RgbaImage — no buffer-padding
# or dimension mismatch issues.
xcap = "0.9"

# ── JPEG encoding ─────────────────────────────────────────────────────────────
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "ico"] }

# ── Browser URL scraping ──────────────────────────────────────────────────────
# ── Input injection ───────────────────────────────────────────────────────────
enigo = "0.2"

## ── Tauri (webview settings window) ─────────────────────────────────────────
## Keeping the settings UI under cfg(windows) prevents pulling Linux GTK/WebKit
## dependency trees into Linux agent builds.

# ── Windows API (keyboard capture, window tracker, toast notifications) ─────
xml-rs = "0.8"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64     = "0.22"
percent-encoding = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# Windows DPAPI: encrypt `config.dat` at rest (tied to this user + machine).
# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ── Password hashing ──────────────────────────────────────────────────────────
argon2 = "0.5"

# ── Platform directories (AppData) ───────────────────────────────────────────
dirs = "6"

# ── HTTP client (enrollment, update checks) ───────────────────────────────────
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# ── System / network info ─────────────────────────────────────────────────────
sysinfo = "0.37"

# ── Installed software (registry) / temp script files ────────────────────────
tempfile = "3"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_RemoteDesktop",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Data_Xml_Dom",
    "UI_Notifications",
] }
windows-dpapi = "0.2"
windows-service = "0.7"
ipconfig = "0.3"
winreg = "0.52"
browser-url = "0.1"
# Tray icon is used to keep the agent discoverable while the settings window is destroyed.
# `image-png` is required because we generate small status-overlay tray PNGs at runtime.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
minisign-verify = "0.2"
mdns-sd = "0.13"

[target.'cfg(unix)'.dependencies]
portable-pty = "0.8"
# Native wlr-screencopy capture for Wayland (wlroots: Hyprland/sway). In-process,
# silent (no portal flash), reusable connection — far smoother than spawning
# `grim` per frame. Pinned to the same fork xcap already depends on, so the
# lockfile is unchanged. Used by `platform/linux/desktop_capture.rs`.
libwayshot-xcap = "0.3.2"


# ── Build dependencies ───────────────────────────────────────────────────────
[target.'cfg(windows)'.build-dependencies]
tauri-build = { version = "2", features = [] }

# ─────────────────────────────────────────────────────────────────────────────
# Release profile – small, fast, single-file binary
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

# ─────────────────────────────────────────────────────────────────────────────
# Local patches
# ─────────────────────────────────────────────────────────────────────────────
# browser-url 0.1.1 ships with two hardcoded debug println!s in its Windows
# backend.  This is a verbatim copy with those two lines removed.
[patch.crates-io]
browser-url = { path = "patches/browser-url" }
