[package]
name    = "vantyr-server"
version = "0.1.0"
edition = "2021"
description = "Vantyr – WebSocket ingestion server, PostgreSQL storage, and web dashboard"

[[bin]]
name = "vantyr-server"
path = "src/main.rs"

[[bin]]
name = "migration_checksums"
path = "src/bin/migration_checksums.rs"

[dependencies]

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1", features = ["full"] }
futures-util = "0.3"

# ── HTTP + WebSocket server ───────────────────────────────────────────────────
axum       = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "request-id"] }
tower_governor = "0.4"
prometheus = "0.14"

# ── Database ──────────────────────────────────────────────────────────────────
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }

# ── Types ─────────────────────────────────────────────────────────────────────
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
semver     = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── MQTT ──────────────────────────────────────────────────────────────────────

# ── Streaming / bytes ─────────────────────────────────────────────────────────
bytes        = "1"
async-stream = "0.3"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow = "1"
subtle = "2.6.1"
parking_lot = "0.12"

# ── Dashboard auth (multi-user) ───────────────────────────────────────────────
argon2 = "0.5"
rand = "0.8"

# ── Optional per-user 2FA (TOTP / RFC 6238) ──────────────────────────────────
totp-rs = { version = "5", default-features = false, features = ["otpauth"] }

# ── OIDC (Authentik) ──────────────────────────────────────────────────────────
openidconnect = { version = "4", features = ["reqwest"] }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"
base64 = "0.22"
urlencoding = "2.1"
tar = "0.4"
flate2 = "1"
idna = "1"

# ── Agent local UI password hashing (Argon2 + SHA-256 legacy) ────────────────
sha2 = "0.10"

# ── Alert rules (URL / keystroke pattern matching) ───────────────────────────
regex = "1"

# ── External notification providers (Home Assistant, etc.) ─────────────────
async-trait = "0.1"
mdns-sd = "0.13"
if-addrs = "0.13"
chrono-tz = "0.10.4"
